2012-02-27  Matthew Garrett  <mjg@redhat.com>
2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/efi/efi.c (grub_efi_get_variable): Add new function.
	* include/grub/efi/efi.h: Likewise.
	* include/grub/efi/api.h: Add guid for EFI-specified variables.
	* include/grub/charset.h (GRUB_MAX_UTF16_PER_UTF8): New definition.
	* grub-core/normal/charset.c (grub_utf8_process): Move from here ...
	* include/grub/charset.h (grub_utf8_process): ... to here. Inline.
	* grub-core/normal/charset.c (grub_utf8_to_utf16): Move from here ...
	* include/grub/charset.h (grub_utf8_to_utf16): ... to here. Inline.

2012-02-27  Matthew Garrett  <mjg@redhat.com>

	* include/grub/efi/pci.h: New file to define EFI PCI protocols.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_iterate): Fix off-by-one
	error.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove inappropriate use of program_transform_name
	on grubdir and bootdir but allow explicit specification of those
	variables.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mknetdir.in (grub_prefix): Removed.
	(subdir): Use @bootdirname@ and @grubdirname@.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace PACKAGE_TARNAME with PACKAGE in pkglibdir and pkgdatadir.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerated.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove improper use of program_transform_name on pkglibrootdir.

	* configure.ac (pkglibrootdir): Removed.
	(grub-mkimage): Replace PKGLIBROOTDIR with PKGLIBDIR.
	* util/grub-mkimage.c: Likewise.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu_text.c (grub_print_message_indented_real): Fix a
	warning.

2012-02-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Use file identifier if no UUID is available
	or user explicitly prompted for it.
